feat: add category endpoint
