# docs/api.yml
@@ -1,7 +1,7 @@
 openapi : 3.0.3
 info : 
   title : MyBank API
-  version : 2.5.1
+  version : 3.2.0
   description: |
     Project app for PROG4 cours by : 
     Fandresena (STD22058),
@@ -14,6 +14,7 @@ tags:
   - name: Account
   - name: Transaction
   - name: Balance
+  - name: Category
 paths:
 
   /accounts:
@@ -226,7 +227,7 @@ paths:
     get:
       tags:
         - "Balance"
-      summary: Get all balance about an account
+      summary: Get info balance about an account
       operationId: getAllBalanceByAccountId
       parameters:
         - in: path
@@ -334,6 +335,42 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/MoneyDrawal'
+
+  /categories:
+    get:
+      tags:
+        - "Category"
+      summary: Get all Categories
+      operationId: getCategoriess
+      responses:
+        200:
+          description: Return list of category
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Category'
+
+    post:
+      tags:
+        - "Category"
+      summary: Create Categories
+      operationId: createCategories
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/CreateCategory'
+      responses:
+        200:
+          description: Return an/list account(s) created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Category'
+
+
 
 components:
   schemas:
